--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -17,11 +17,10 @@ jobs:
       with:
         python-version: '3.x' # Choose the appropriate Python version
 
-    - name: Run the update_model script
+    - name: Commit and Push
       run: |
-        python update_model.py
-        git config user.email "you@example.com"
-        git config user.name "GitHub Actions"
+        git config user.email "jdominion123@gmail.com"
+        git config user.name "DOMINION-JOHN1"
         git add .
-        git commit -m "Update model"
+        git commit -m "Update LSTM Model"
         git push
