--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -8,30 +8,29 @@ jobs:
   update_model:
     runs-on: windows-latest
 
-steps:
-      - name: Check Out Code
-        uses: actions/checkout@v2
+    steps:
+    - name: Check Out Code
+      uses: actions/checkout@v2
 
-- name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
 
-- name: Install Dependencies
-        run: |
-          set -x
-          python -m venv .venv
-          . .venv/bin/activate
-          pip install -r requirements.txt
+    - name: Install Dependencies
+      run: |
+        set -x
+        python -m venv .venv
+        . .venv/Scripts/activate
+        pip install -r requirements.txt
 
-- name: Update Model
-        run: python update_model.py
+    - name: Update Model
+      run: python update_model.py
 
-- name: Commit and Push
-        run: |
-          git config user.email "jdominion123@gmail.com"
-          git config user.name "DOMINION-JOHN1"
-          git add .
-          git commit -m "Update LSTM Model"
-          git push
-
+    - name: Commit and Push
+      run: |
+        git config user.email "jdominion123@gmail.com"
+        git config user.name "DOMINION-JOHN1"
+        git add .
+        git commit -m "Update LSTM Model"
+        git push
