--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -1,8 +1,8 @@
-name: Update LSTM Model
+name: Update_Model
 
 on:
   schedule:
-    - cron: "0 21-10 * * *"
+    - cron: "0 21-14 * * *"
 
 jobs:
   update_model:
