--- a/requirements.txt
+++ b/requirements.txt
@@ -34,8 +34,8 @@ streamlit
 tenacity==8.2.3
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
-tensorflow
-tensorflow-estimator==2.13.0
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 toml==0.10.2
