--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "42 22 * * *"
+    - cron: "34 13 * * *"
 
 jobs:
   update_model:
@@ -10,15 +10,15 @@ jobs:
 
     steps:
       - name: Check Out Code
-        uses: actions/checkout@v4  # Use the latest version of the action
-    
+        uses: actions/checkout@v2  # Use the latest version of the action
+
       - name: Set up Node.js
-        uses: actions/setup-node@v4  # Use the latest version of the action
+        uses: actions/setup-node@v2  # Use the latest version of the action
         with:
           node-version: '16'  # Specify the Node.js version you want to use
 
       - name: Set up Python
-        uses: actions/setup-python@v4  # Use the latest version of the action
+        uses: actions/setup-python@v2  # Use the latest version of the action
         with:
           python-version: '3.x'  # Use the latest available Python 3 version
 
@@ -38,3 +38,9 @@ jobs:
           git add .
           git commit -m "Update LSTM Model"
           git push
+
+      - name: Cache Python dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: python-${{ runner.os }}-${{ hashFiles('**/*.txt') }}
