--- a/requirements.txt
+++ b/requirements.txt
@@ -31,12 +31,12 @@ six==1.16.0
 smmap==5.0.0
 starlette
 streamlit
-tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
 termcolor==2.3.0
 toml==0.10.2
 toolz==0.12.0
