--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "10 14 * * *"
+    - cron: "16 15* * *"
 
 jobs:
   update_model:
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4  # Use the latest version of the action
         with:
-          python-version: '3.x'  # Use the latest available Python 3 version
+          python-version: '3.9'  # Use the latest available Python 3 version
 
       - name: Install Dependencies
         run: |
