--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 referencing==0.30.2
 render==1.0.0
-requests
+requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.5.2
 rpds-py==0.10.0
 rsa==4.9
