--- a/requirements.txt
+++ b/requirements.txt
@@ -1,283 +1,48 @@
-absl-py==1.4.0
-bidict==0.22.1
-bigframes==0.13.0
-bleach==6.1.0
-blinker==1.4
-blis==0.7.11
-blosc2==2.0.0
-bokeh==3.3.0
-bqplot==0.12.42
-branca==0.7.0
-build==1.0.3
-colour==0.1.5
-db-dtypes==1.1.1
-dbus-python==1.2.18
-debugpy==1.6.6
-decorator==4.4.2
-defusedxml==0.7.1
-diskcache==5.6.3
-distributed==2023.8.1
-distro==1.7.0
-dlib==19.24.2
-dm-tree==0.1.8
-docopt==0.6.2
-docutils==0.18.1
-dopamine-rl==4.0.6
-duckdb==0.9.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-firebase-admin==5.3.0
-Flask==2.2.5
-flatbuffers==23.5.26
-flax==0.7.5
-folium==0.14.0
-gensim==4.3.2
-geocoder==1.38.1
-geographiclib==2.0
-geopandas==0.13.2
-geopy==2.3.0
-gin-config==0.5.0
-glob2==0.7
-h5netcdf==1.3.0
-h5py==3.9.0
-holidays==0.36
-holoviews==1.17.1
-html5lib==1.1
-httpimport==1.3.1
-httplib2==0.22.0
-humanize==4.7.0
-hyperopt==0.2.7
-ibis-framework==6.2.0
-idna==3.4
-imageio==2.31.6
-imageio-ffmpeg==0.4.9
-imagesize==1.4.1
-imbalanced-learn==0.10.1
-imgaug==0.4.0
-importlib-metadata==6.8.0
-importlib-resources==6.1.1
-imutils==0.5.4
-inflect==7.0.0
-iniconfig==2.0.0
-install==1.3.5
-intel-openmp==2023.2.0
-ipyevents==2.0.2
-ipyfilechooser==0.6.0
-ipykernel==5.5.6
-ipyleaflet==0.17.4
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipython-sql==0.5.0
-ipytree==0.2.2
-ipywidgets==7.7.1
-jsonpickle==3.0.2
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter-client==6.1.12
-jupyter-console==6.1.0
-jupyter-server==1.24.0
-jupyter_core==5.5.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-kaggle==1.5.16
-keras==2.14.0
-keyring==23.5.0
-kiwisolver==1.4.5
-langcodes==3.3.0
-launchpadlib==1.10.16
-lxml==4.9.3
-more-itertools==10.1.0
-moviepy==1.0.3
-notebook==6.5.5
-notebook_shim==0.2.3
-numba==0.58.1
-numexpr==2.8.7
-numpy==1.23.5
-oauth2client==4.1.3
-oauthlib==3.2.2
-openpyxl==3.1.2
+disutils
+numpy
 opt-einsum==3.3.0
-optax==0.1.7
-orbax-checkpoint==0.4.2
-osqp==0.6.2.post8
-packaging==23.2
-pandas==1.5.3
-pandas-datareader==0.10.0
-pandas-gbq==0.17.9
-pandas-stubs==1.5.3.230304
-pandocfilters==1.5.0
-panel==1.3.1
-param==2.0.0
-parso==0.8.3
-parsy==2.1
-partd==1.4.1
-pathlib==1.0.1
-pathy==0.10.3
-patsy==0.5.3
-peewee==3.17.0
-pexpect==4.8.0
+joblib==1.2.0
+pydantic
+packaging==23.0
+pandas==2.0.0
 pickleshare==0.7.5
-Pillow==9.4.0
-pip-tools==6.13.0
-pipreqs==0.4.13
-platformdirs==3.11.0
-plotly==5.15.0
-plotnine==0.12.4
-pluggy==1.3.0
-polars==0.17.3
-pooch==1.8.0
-portpicker==1.5.2
-prefetch-generator==1.0.3
-preshed==3.0.9
-prettytable==3.9.0
-proglog==0.1.10
-progressbar2==4.2.0
-prometheus-client==0.18.0
-promise==2.3
-prompt-toolkit==3.0.39
-prophet==1.1.5
-proto-plus==1.22.3
-protobuf==3.20.3
-psutil==5.9.5
-psycopg2==2.9.9
-ptyprocess==0.7.0
-py-cpuinfo==9.0.0
-py4j==0.10.9.7
-pyarrow==9.0.0
+Pillow==9.5.0
+protobuf==4.23.4
+pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pycocotools==2.0.7
-pycparser==2.21
-pyct==0.5.0
-pydantic==1.10.13
-pydata-google-auth==1.8.2
-pydot==1.4.2
-pydot-ng==2.0.0
-pydotplus==2.0.2
-PyDrive==1.3.1
-PyDrive2==1.6.3
-pyerfa==2.0.1.1
-pygame==2.5.2
-Pygments==2.16.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymc==5.7.2
-pymystem3==0.2.0
-PyOpenGL==3.1.7
-pyOpenSSL==23.3.0
-pyparsing==3.1.1
-pyperclip==1.8.2
-pyproj==3.6.1
-pyproject_hooks==1.0.0
-pyshp==2.3.1
-PySocks==1.7.1
-pytensor==2.14.2
-pytest==7.4.3
-python-apt==0.0.0
-python-box==7.1.1
+pydeck==0.8.0
+Pygments==2.15.1
+Pympler==1.0.1
 python-dateutil==2.8.2
-python-louvain==0.16
-python-slugify==8.0.1
-python-utils==3.8.1
-pytz==2023.3.post1
-pyviz_comms==3.0.0
-PyWavelets==1.4.1
-PyYAML==6.0.1
-pyzmq==23.2.1
-qdldl==0.1.7.post0
-qudida==0.0.4
-ratelim==0.1.6
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
 referencing==0.30.2
-regex==2023.6.3
+render==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
-requirements-parser==0.5.0
-rich==13.6.0
-rpds-py==0.12.0
-rpy2==3.4.2
+rich==13.5.2
+rpds-py==0.10.0
 rsa==4.9
-scikit-image==0.19.3
 scikit-learn==1.2.2
-scipy==1.11.3
-scooby==0.9.2
-scs==3.2.4
 seaborn==0.12.2
-SecretStorage==3.3.1
-Send2Trash==1.8.2
-shapely==2.0.2
 six==1.16.0
-sklearn-pandas==2.2.0
-smart-open==6.4.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soupsieve==2.5
-soxr==0.3.7
-spacy==3.6.1
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-sqlglot==17.16.2
-sqlparse==0.4.4
-srsly==2.4.8
-stanio==0.3.0
-statsmodels==0.14.0
-sympy==1.12
-tables==3.8.0
-tabulate==0.9.0
-tbb==2021.10.0
-tblib==3.0.0
-tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-datasets==4.9.3
-tensorflow-estimator==2.14.0
-tensorflow-gcs-config==2.14.0
-tensorflow-hub==0.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-metadata==1.14.0
-tensorflow-probability==0.22.0
-tensorstore==0.1.45
+smmap==5.0.0
+starlette
+streamlit
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
 termcolor==2.3.0
-terminado==0.17.1
-text-unidecode==1.3
-textblob==0.17.1
-tf-slim==1.1.0
-tornado==6.3.2
-tqdm==4.66.1
-traitlets==5.7.1
-traittypes==0.2.1
-triton==2.1.0
-tweepy==4.14.0
-typer==0.9.0
-types-pytz==2023.3.1.1
-types-setuptools==68.2.0.1
-typing_extensions==4.5.0
-tzlocal==5.2
-uc-micro-py==1.0.2
-uritemplate==4.1.1
-urllib3==2.0.7
-vega-datasets==0.9.0
-wadllib==1.3.6
-wasabi==1.1.2
-wcwidth==0.2.9
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.4
-Werkzeug==3.0.1
-widgetsnbextension==3.6.6
-wordcloud==1.9.2
-wrapt==1.14.1
-xarray==2023.7.0
-xarray-einstats==0.6.0
-xgboost==2.0.1
-xlrd==2.0.1
-xxhash==3.4.1
-xyzservices==2023.10.1
-yarg==0.1.9
-yarl==1.9.2
-yellowbrick==1.5
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3
+tqdm==4.65.0
+typing_extensions
+tzdata==2023.3
+tzlocal==4.3.1
+uvicorn==0.23.2
 yfinance==0.2.31
-zict==3.0.0
-zipp==3.17.0
