--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ safetensors==0.4.0
 scikit-image==0.19.3
 scikit-learn==1.2.2
 seaborn==0.12.2
+streamlit==1.26.0
 sklearn-pandas==2.2.0
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
