--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "01 14 * * *"
+    - cron: "00 15 * * *"
 
 jobs:
   update_model:
@@ -31,4 +31,7 @@ jobs:
           git config user.name "DOMINION-JOHN1"
           git add .
           git commit -m "Update LSTM Model"
-          git push
+          git remote add origin_with_token https://$GOLD_TOKEN@github.com/DOMINION-JOHN1/LSTM-Gold-Price-Prediction.git
+          git push origin_with_token main
+        env:
+          PAT_TOKEN: ${{ secrets.GOLD_TOKEN }}
