--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "40 15 * * *"
+    - cron: "41 15 * * *"
 
 jobs:
   update_model:
@@ -32,6 +32,6 @@ jobs:
           git add .
           git commit -m "Update LSTM Model"
           git remote add origin_with_token https://$GOLD_TOKEN@github.com/DOMINION-JOHN1/LSTM-Gold-Price-Prediction.git
-          git push origin_with_token main
+          git push origin_with_token HEAD:refs/heads/main
         env:
           GOLD_TOKEN: ${{ secrets.GOLD_TOKEN }}
