--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "47 17 * * *"
+    - cron: "08 18 * * *"
 
 jobs:
   update_model:
@@ -27,8 +27,8 @@ jobs:
 
       - name: Commit and Push
         run: |
-          git config user.email "jdominion123@gmail.com"
-          git config user.name "DOMINION-JOHN1"
+          git config --global user.email "jdominion123@gmail.com"
+          git config --global user.name "DOMINION-JOHN1"
           git add .
           git commit -m "Update LSTM Model"
           git push origin HEAD:refs/heads/main
