--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "33 08 * * *"
+    - cron: "58 09 * * *"
 
 jobs:
   update_model:
@@ -23,7 +23,10 @@ jobs:
           pip install yfinance  # Add this line to install yfinance
 
       - name: Update Model
-        run: python update_model.py
+        run: |
+          git config user.email "jdominion123@gmail.com"
+          git config user.name "DOMINION-JOHN1"
+          python update_model.py
 
       - name: Commit and Push
         run: |
