--- a/.github/workflows/Update_Model.yml
+++ b/.github/workflows/Update_Model.yml
@@ -2,7 +2,7 @@ name: Update_Model
 
 on:
   schedule:
-    - cron: "42 22 * * *"
+    - cron: "44 22 * * *"
 
 jobs:
   update_model:
@@ -32,6 +32,5 @@ jobs:
         run: |
           git add .
           git commit -m "Update LSTM Model"
-          git push origin HEAD:refs/heads/main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git remote add origin_with_token https://jdominion123:${{ secrets.GOLD_TOKEN }}@github.com/DOMINION-JOHN1/LSTM-Gold-Price-Prediction.git
+          git push origin_with_token HEAD:refs/heads/main
